@@ -1450,6 +1450,118 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testLiteralFunction
+specifier|public
+name|void
+name|testLiteralFunction
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|NAME
+init|=
+name|FunctionQParserPlugin
+operator|.
+name|NAME
+decl_stmt|;
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|(
+literal|"variable"
+argument_list|,
+literal|"foobar"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|QParser
+operator|.
+name|getParser
+argument_list|(
+literal|"literal('a value')"
+argument_list|,
+name|NAME
+argument_list|,
+name|req
+argument_list|)
+operator|.
+name|getQuery
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|QParser
+operator|.
+name|getParser
+argument_list|(
+literal|"literal('a value')"
+argument_list|,
+name|NAME
+argument_list|,
+name|req
+argument_list|)
+operator|.
+name|getQuery
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|QParser
+operator|.
+name|getParser
+argument_list|(
+literal|"literal(\"a value\")"
+argument_list|,
+name|NAME
+argument_list|,
+name|req
+argument_list|)
+operator|.
+name|getQuery
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|QParser
+operator|.
+name|getParser
+argument_list|(
+literal|"literal($variable)"
+argument_list|,
+name|NAME
+argument_list|,
+name|req
+argument_list|)
+operator|.
+name|getQuery
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|QParser
+operator|.
+name|getParser
+argument_list|(
+literal|"strdist(\"a value\",literal('a value'),edit)"
+argument_list|,
+name|NAME
+argument_list|,
+name|req
+argument_list|)
+operator|.
+name|getQuery
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
